--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 		<div id="slider">
 			<ul>				
-				<li><a href="#"><img src="images/slide1.png" alt="" /></a></li>
-				<li><a href="#"><img src="images/slide2.png" alt="" /></a></li>
-				<li><a href="#"><img src="images/slide3.png" alt="" /></a></li>
+				<li><a href="#"><img src="ims/slide1.png" alt="" /></a></li>
+				<li><a href="#"><img src="ims/slide2.png" alt="" /></a></li>
+				<li><a href="#"><img src="ies/slide3.png" alt="" /></a></li>
 			</ul>
 		</div>
 
